oms-icp-config/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2018-01-28T05:22:35Z
  generation: 17
  labels:
    app: oms-icp-app
  name: oms-icp-app
  namespace: default
  resourceVersion: "19725518"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/oms-icp-app
  uid: 3fc3c685-03eb-11e8-bb0b-fa163ebc2b74
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oms-icp-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: oms-icp-app
    spec:
      containers:
      - image: 9.113.25.216:8500/rsc/icp-was-oms95
        imagePullPolicy: IfNotPresent
        name: oms-icp-app
        ports:
        - containerPort: 31000
          protocol: TCP
        - containerPort: 32000
          protocol: TCP
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-04-19T11:44:14Z
    lastUpdateTime: 2018-04-19T11:44:14Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 17
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
